adding paging, adding sync from serve

--- a/www/tpl/wine-details.html
+++ b/www/tpl/wine-details.html
@@ -7,7 +7,7 @@
     <h1><%= name %></h1>
     
     <span><%= description %></span>
-    <span><a href="#editentry/<%= remote_id %>">edit</a></span>
+    <span><a href="#editentry/<%= remote_id %>"><%= remote_id %></a></span>
     </p>
     
 </div>
