--- a/www/tpl/wine-list.html
+++ b/www/tpl/wine-list.html
@@ -1,7 +1,9 @@
 <div class="header">
-    <h2>Backbone Cellar</h2>
+    <h2><a href="#page/2">2</a></h2>
+
 </div>
 
 <div class="content">
     <ul class="nav nav-list"></ul>
 </div>
+
