--- a/www/tpl/wine-list-item.html
+++ b/www/tpl/wine-list-item.html
@@ -1,2 +1,2 @@
-<a href='#wines/<%= remote_id %>'><%= name %> <%= updated_at %></a>
+<a href='#wines/<%= remote_id %>'><%= name %> </a>
 <a href="#newentry">new</a>
