--- a/www/tpl/wine-list.html
+++ b/www/tpl/wine-list.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <h2><a href="#page/2">2</a></h2>
+    <h2><a href="#page/2">2</a> <a href="#page/1">1</a></h2>
 
 </div>
 
